# mcq-forge

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: help.html
app/src/main/cpp/: CMakeLists.txt  tokenizer_core.cpp  tokenizer_jni.cpp
app/src/main/cpp/include/: tokenizer_core.h
app/src/main/java/com/elephantcos/mcqforge/: MainActivity.kt  McqForgeApp.kt
app/src/main/java/com/elephantcos/mcqforge/data/intelligence/: TFLiteInference.kt
app/src/main/java/com/elephantcos/mcqforge/data/local/: AppDatabase.kt
app/src/main/java/com/elephantcos/mcqforge/data/repository/: McqRepository.kt
app/src/main/java/com/elephantcos/mcqforge/native/: NativeTokenizer.kt
app/src/main/java/com/elephantcos/mcqforge/nlp/: NlpBridge.kt  NlpProcessor.java
app/src/main/java/com/elephantcos/mcqforge/ui/components/: McqCard.kt
app/src/main/java/com/elephantcos/mcqforge/ui/navigation/: NavGraph.kt
app/src/main/java/com/elephantcos/mcqforge/ui/screens/: GenerateScreen.kt  HelpScreen.kt  HomeScreen.kt  PracticeScreen.kt
app/src/main/java/com/elephantcos/mcqforge/ui/theme/: Theme.kt
app/src/main/java/com/elephantcos/mcqforge/viewmodel/: GenerateViewModel.kt  HomeViewModel.kt  PracticeViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/mipmap-xxhdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
(+4 files in other folders)
